--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
-import time
-
-def nembak_pacar():
-    print("Hei, boleh tanya sesuatu gak?")
-    time.sleep(2)
-    print("Kamu tahu gak apa yang aku rasain sekarang?")
-    time.sleep(3)
-    print("Aku lagi merasa... kayak code yang belum di-debug...")
-    time.sleep(2)
-    print("Kenapa? Karena... aku gak lengkap tanpa kamu! 😄")
-    time.sleep(3)
-    print("Jadi... mau gak jadi pacarku?")
-
-nembak_pacar()
+<html>
+  <body>
+    <h1>Hai Cantik!</h1>
+    <img src="https://c.tenor.com/Z8ezUHZzcLoAAAAC/love.gif" />
+    <h1>Maukah kamu menjadi pacarku lagi?</h1>
+    <button id="btn_mau" onclick="alert('I LOVE YOU')">Mau</button>&nbsp;
+    <button id="btn_gamau" onclick="gamau(this)" style="position: absolute">
+      Gamau
+    </button>
+  </body>
+  <script>
+    function gamau(id) {
+      var mau = document.getElementById("btn_mau");
+      var i = Math.floor(Math.random() * 300) + 1;
+      var j = Math.floor(Math.random() * 100) + mau.offsetTop;
+      id.style.left = i + "px";
+      id.style.top = j + "px";
+    }
+  </script>
+</html>
